# snakehouse

./: .codeclimate.yml  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
cython_multibuild/: __init__.py  build.py  multibuild.py
docs/: accelerating.rst  conf.py  coverage.rst  index.rst  usage.rst  utilities.rst
example/: example.pyx  setup.py
example/example2/: example.pxd
example/example3/example3/example3/: __init__.py  test.pyx
example/example_module/: __init__.py  test.pyx  test2.pyx  test_n.c  test_n.h
example/example_module/test3/: test2.pyx  test3.pyx
example/tests/: test_test.py
snakehouse/: __init__.py  bootstrap.template  build.py  cdef.template  constants.py  faster_builds.py  initpy.template  multibuild.py  requirements.py
snakehouse/templates/: bootstrap.mako  hfile.mako  initpy.mako
