# coding: utf-8
[metadata]
name = snakehouse
keywords = cython, extension, multiple, pyx
version = 1.5
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
license_files = LICENSE
author = Piotr Maślanka
author_email = piotrm@smok.co
description = Utilities for packing multiple pyx files into a single Cython extension
url = https://github.com/smok-serwis/snakehouse
project-urls =
    Code = https://github.com/smok-serwis/snakehouse
    Issue tracker = https://github.com/smok-serwis/snakehouse/issues
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Build Tools

[options]
install_requires =
    Cython
    mako
    satella

python_requires = !=2.7.*,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
packages = find:


[options.packages.find]
exclude =
    docs
    example

[options.package_data]
snakehouse = templates/*.mako

[pycodestyle]
max-line-length = 100

[pep8]
max-line-length = 100

[bdist_wheel]
universal = 0

